--- a/SupplierRanking/Views/HomeLogada/Pesquisa.cshtml
+++ b/SupplierRanking/Views/HomeLogada/Pesquisa.cshtml
@@ -163,7 +163,66 @@
 
 
         <!-- Modal -->
-        
+        <div class="modal fade" id="myModal" role="dialog">
+            <div class="modal-dialog modal-lg">
+                <div class="modal-content">
+                    <div class="modal-header" style="
+                            background-color: #0C496BE6;
+                            color: white;
+                            border-bottom: 3px solid #bbad00; ">
+
+                        <h4 style="margin-left: 380px;" class="modal-title">Filtro </h4>
+                        <button type="button" class="close" data-dismiss="modal" style="color:white;">×</button>
+
+                    </div>
+
+                    <form method="post" action="../HomeLogada/Pesquisa">
+                        <div class="modal-body">
+                            <p>Filtrar por:</p>
+
+
+                            <label style="margin-left: 4px;" class="container">
+                                Entrega
+
+                                <input value="media_entrega" id="entrega" type="radio" checked="checked" name="pesquisa"style="visibility:hidden">
+                                <span style="margin-left: -15px;" class="checkmark"></span>
+                            </label>
+                            <label style="margin-left: 4px;" class="container">
+                                Qualidade
+                                <input value="media_qualidade" id="qualidade" type="radio" name="pesquisa" style="visibility:hidden">
+                                <span style="margin-left: -15px;" class="checkmark"></span>
+                            </label>
+                            <label style="margin-left: 4px;" class="container">
+                                Preço
+                                <input value="media_preco" id="preco" type="radio" name="pesquisa" style="visibility:hidden">
+                                <span style="margin-left: -15px;" class="checkmark"></span>
+                            </label>
+                            <label style="margin-left: 4px;" class="container">
+                                Satisfação
+                                <input value="media_satisfacao" id="satisfacao" type="radio" name="pesquisa" style="visibility:hidden">
+                                <span style="margin-left: -15px;" class="checkmark"></span>
+                            </label>
+                            <label style="margin-left: 4px;" class="container">
+                                Atendimento
+                                <input value="media_atendimento" id="atendimento" type="radio" name="pesquisa" style="visibility:hidden">
+                                <span style="margin-left: -15px;" class="checkmark"></span>
+                            </label>
+
+                        </div>
+                        <div class="modal-footer">
+                            <button type="submit" class="btn btn-default">Concluir</button>
+                            <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
+
+                        </div>
+                    </form>
+
+
+
+
+
+                </div>
+            </div>
+        </div>
 
     </div>
 </div>
