--- a/SupplierRanking/Views/HomeLogada/RankingGeral.cshtml
+++ b/SupplierRanking/Views/HomeLogada/RankingGeral.cshtml
@@ -7,15 +7,14 @@
 
 <div class="m-5">
     
-    <br />
-    <br />
-    <div class="row justify-content-center text-center mt-4">
-        <h2 style="color: #D0A748;font-weight: bold; text-shadow: 1px 2px 0px #6c6c6c;margin-bottom: 4rem;margin-top: 8rem;">
+   
+    <div class="row justify-content-center text-center mt-4" >
+        <h2 style="color: #D0A748;font-weight: bold; text-shadow: 1px 2px 0px #6c6c6c;margin-bottom: 8rem;margin-top: 4rem;">
             Esses são nossos Destaques da Semana!
         </h2>
     </div>
 
-    <div class="row">
+    <div class="row" style="width: 1705px;">
         <ul class="row list-unstyled m-3">
             @foreach (var item in Model)
             {  
