--- a/SupplierRanking/Views/Shared/Layout_logada.cshtml
+++ b/SupplierRanking/Views/Shared/Layout_logada.cshtml
@@ -99,9 +99,9 @@
                     <li class="active">
                         <a href="/HomeLogada/RankingGeral"  aria-expanded="false">Home</a>
                     </li>
-                    <li>
+                    @*<li>
                         <a href="/HomeLogada/Pesquisa"  aria-expanded="false">Pesquisar</a>
-                    </li>
+                    </li>*@
                     
                     <li>
                         <a href="/HomeLogada/RankingPremium"  aria-expanded="false">Ranking Premium</a>
@@ -125,69 +125,10 @@
                     
             </nav>
             <!---- Modal ---->
-            <div class="modal fade" id="myModal" role="dialog">
-                <div class="modal-dialog modal-lg">
-                    <div class="modal-content">
-                        <div class="modal-header" style="
-                            background-color: #0C496BE6;
-                            color: white;
-                            border-bottom: 3px solid #bbad00; ">
-
-                            <h4 style="margin-left: 380px;" class="modal-title">Filtro </h4>
-                            <button type="button" class="close" data-dismiss="modal" style="color:white;">×</button>
-
-                        </div>
-
-                        <form method="post" action="../HomeLogada/Pesquisa">
-                            <div class="modal-body">
-                                <p>Filtrar por:</p>
-
-
-                                <label style="margin-left: 4px;" class="container">
-                                    Entrega
-
-                                    <input value="media_entrega" id="entrega" type="radio" checked="checked" name="pesquisa">
-                                    <span style="margin-left: -15px;" class="checkmark"></span>
-                                </label>
-                                <label style="margin-left: 4px;" class="container">
-                                    Qualidade
-                                    <input value="media_qualidade" id="qualidade" type="radio" name="pesquisa">
-                                    <span style="margin-left: -15px;" class="checkmark"></span>
-                                </label>
-                                <label style="margin-left: 4px;" class="container">
-                                    Preço
-                                    <input value="media_preco" id="preco" type="radio" name="pesquisa">
-                                    <span style="margin-left: -15px;" class="checkmark"></span>
-                                </label>
-                                <label style="margin-left: 4px;" class="container">
-                                    Satisfação
-                                    <input value="media_satisfacao" id="satisfacao" type="radio" name="pesquisa">
-                                    <span style="margin-left: -15px;" class="checkmark"></span>
-                                </label>
-                                <label style="margin-left: 4px;" class="container">
-                                    Atendimento
-                                    <input value="media_atendimento" id="atendimento" type="radio" name="pesquisa">
-                                    <span style="margin-left: -15px;" class="checkmark"></span>
-                                </label>
-
-                            </div>
-                            <div class="modal-footer">
-                                <button type="submit" class="btn btn-default">Concluir</button>
-                                <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
-
-                            </div>
-                        </form>
-
-
-
-
-
-                    </div>
-                </div>
-            </div>
+            
         </div>
 
-        <div class="conteudo-logada row pl-5 pr-5 col-11">
+        <div class="conteudo-logada row pl-5 pr-5 col-11" style="top: 105px;">
             @RenderBody()
         </div>
 
