--- a/SupplierRanking/Views/Shared/Layout_logada.cshtml
+++ b/SupplierRanking/Views/Shared/Layout_logada.cshtml
@@ -2,6 +2,16 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <script>
+            function carregaFoto() {
+                
+                $.post("/HomeLogada/CarregaFoto", {}, function (data) {
+                    
+                    if (data.length > 0)
+                        document.getElementById('perfil').src = data;
+                });
+            }
+        </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -118,17 +128,17 @@
                     </li>
                 </ul>
                 
-                <div id="perfil" style="width: 100px; height: 100px; background-color: antiquewhite; border-radius: 70px; margin: 167px auto auto 20px;">
-                    <a class="perfil"href="/HomeLogada/Perfil">Perfil </a>
                     @if (Session["UserFornecedor"] != null)
                     {
-                        String imagem64 = string.Format("data:image/jpeg;base64,{0}", Model.imagem); //PRECISA ARRUMAR ESSA MERDA AQUI
-                        <img class="perfil" href="/HomeLogada/Perfil" name="imagem" src="@imagem64" height="100" width="100" />
+                    <a href="/HomeLogada/Perfil/?Cnpj=@Session["UserFornecedor"].ToString()">
+                        <img src="/Content/images/iconecor.png" id="perfil" style="width: 100px; height: 100px; border-radius: 50px; border: 1px solid white; margin: 167px auto auto 20px;"/>
+                    </a>
+                    }
+                    else
+                    {
+                        <img src="/Content/images/iconecor.png" id="perfil" style="width: 100px; height: 100px; border-radius: 50px; border: 1px solid white; margin: 167px auto auto 20px;"/>
                     }
 
-                    @RenderSection("Foto", false)
-                </div>
-                    
             </nav>
             <!---- Modal ---->
             <div class="modal fade" id="myModal" role="dialog">
@@ -212,6 +222,9 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <script>
+            carregaFoto();
+        </script>
     </body>
 
 </html>
