--- a/SupplierRanking/Views/HomeLogada/Pesquisa.cshtml
+++ b/SupplierRanking/Views/HomeLogada/Pesquisa.cshtml
@@ -171,55 +171,233 @@
                             color: white;
                             border-bottom: 3px solid #bbad00; ">
 
-                        <h4 style="margin-left: 380px;" class="modal-title">Filtro </h4>
+                        <h4 style="margin-left: 241px;" class="modal-title">Nós ajude a melhorar nosso serviço!</h4>
                         <button type="button" class="close" data-dismiss="modal" style="color:white;">×</button>
 
                     </div>
 
-                    <form method="post" action="../HomeLogada/Pesquisa">
-                        <div class="modal-body">
-                            <p>Filtrar por:</p>
 
 
-                            <label style="margin-left: 4px;" class="container">
-                                Entrega
 
-                                <input value="media_entrega" id="entrega" type="radio" checked="checked" name="pesquisa"style="visibility:hidden">
-                                <span style="margin-left: -15px;" class="checkmark"></span>
+                    <div class="modal-avaliacao-body">
+                        <p>Avalie por :</p>
+
+                        <h1 style="font-size: 23px;margin-left: 134px;margin-bottom: -36px;">
+                            Entrega
+                        </h1>
+                        <form style="margin-left: 269px;" class="rating">
+
+                            <label>
+
+
+                                <input type="radio" name="stars" value="1" />
+                                <span class="icon">★</span>
                             </label>
-                            <label style="margin-left: 4px;" class="container">
-                                Qualidade
-                                <input value="media_qualidade" id="qualidade" type="radio" name="pesquisa" style="visibility:hidden">
-                                <span style="margin-left: -15px;" class="checkmark"></span>
+                            <label>
+                                <input type="radio" name="stars" value="2" />
+                                <span class="icon">★</span>
+                                <span class="icon">★</span>
                             </label>
-                            <label style="margin-left: 4px;" class="container">
-                                Preço
-                                <input value="media_preco" id="preco" type="radio" name="pesquisa" style="visibility:hidden">
-                                <span style="margin-left: -15px;" class="checkmark"></span>
+                            <label>
+                                <input type="radio" name="stars" value="3" />
+                                <span class="icon">★</span>
+                                <span class="icon">★</span>
+                                <span class="icon">★</span>
                             </label>
-                            <label style="margin-left: 4px;" class="container">
-                                Satisfação
-                                <input value="media_satisfacao" id="satisfacao" type="radio" name="pesquisa" style="visibility:hidden">
-                                <span style="margin-left: -15px;" class="checkmark"></span>
+                            <label>
+                                <input type="radio" name="stars" value="4" />
+                                <span class="icon">★</span>
+                                <span class="icon">★</span>
+                                <span class="icon">★</span>
+                                <span class="icon">★</span>
                             </label>
-                            <label style="margin-left: 4px;" class="container">
-                                Atendimento
-                                <input value="media_atendimento" id="atendimento" type="radio" name="pesquisa" style="visibility:hidden">
-                                <span style="margin-left: -15px;" class="checkmark"></span>
+                            <label>
+                                <input type="radio" name="stars" value="5" />
+                                <span class="icon">★</span>
+                                <span class="icon">★</span>
+                                <span class="icon">★</span>
+                                <span class="icon">★</span>
+                                <span class="icon">★</span>
                             </label>
 
-                        </div>
-                        <div class="modal-footer">
-                            <button type="submit" class="btn btn-default">Concluir</button>
-                            <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
+                        </form>
 
-                        </div>
-                    </form>
+                        <br />
+
+                        <h1 style="font-size: 23px;margin-left: 134px;margin-bottom: -36px;">
+                            Qualidade
+                        </h1>
+                        <form style="margin-left: 269px;" class="rating">
+                            <label>
+                                <input type="radio" name="stars" value="1" />
+                                <span class="icon">★</span>
+                            </label>
+                            <label>
+                                <input type="radio" name="stars" value="2" />
+                                <span class="icon">★</span>
+                                <span class="icon">★</span>
+                            </label>
+                            <label>
+                                <input type="radio" name="stars" value="3" />
+                                <span class="icon">★</span>
+                                <span class="icon">★</span>
+                                <span class="icon">★</span>
+                            </label>
+                            <label>
+                                <input type="radio" name="stars" value="4" />
+                                <span class="icon">★</span>
+                                <span class="icon">★</span>
+                                <span class="icon">★</span>
+                                <span class="icon">★</span>
+                            </label>
+                            <label>
+                                <input type="radio" name="stars" value="5" />
+                                <span class="icon">★</span>
+                                <span class="icon">★</span>
+                                <span class="icon">★</span>
+                                <span class="icon">★</span>
+                                <span class="icon">★</span>
+                            </label>
+
+                        </form>
+
+                        <br />
+
+                        <h1 style="font-size: 23px;margin-left: 134px;margin-bottom: -36px;">
+                            Preço
+                        </h1>
+
+                        <form style="margin-left: 269px;" class="rating">
+                            <label>
+                                <input type="radio" name="stars" value="1" />
+                                <span class="icon">★</span>
+                            </label>
+                            <label>
+                                <input type="radio" name="stars" value="2" />
+                                <span class="icon">★</span>
+                                <span class="icon">★</span>
+                            </label>
+                            <label>
+                                <input type="radio" name="stars" value="3" />
+                                <span class="icon">★</span>
+                                <span class="icon">★</span>
+                                <span class="icon">★</span>
+                            </label>
+                            <label>
+                                <input type="radio" name="stars" value="4" />
+                                <span class="icon">★</span>
+                                <span class="icon">★</span>
+                                <span class="icon">★</span>
+                                <span class="icon">★</span>
+                            </label>
+                            <label>
+                                <input type="radio" name="stars" value="5" />
+                                <span class="icon">★</span>
+                                <span class="icon">★</span>
+                                <span class="icon">★</span>
+                                <span class="icon">★</span>
+                                <span class="icon">★</span>
+                            </label>
+
+                        </form>
 
 
+                        <br />
+
+                        <h1 style="font-size: 23px;margin-left: 134px;margin-bottom: -36px;">
+                            Satisfação
+                        </h1>
+
+                        <form style="margin-left: 269px;" class="rating">
+                            <label>
+                                <input type="radio" name="stars" value="1" />
+                                <span class="icon">★</span>
+                            </label>
+                            <label>
+                                <input type="radio" name="stars" value="2" />
+                                <span class="icon">★</span>
+                                <span class="icon">★</span>
+                            </label>
+                            <label>
+                                <input type="radio" name="stars" value="3" />
+                                <span class="icon">★</span>
+                                <span class="icon">★</span>
+                                <span class="icon">★</span>
+                            </label>
+                            <label>
+                                <input type="radio" name="stars" value="4" />
+                                <span class="icon">★</span>
+                                <span class="icon">★</span>
+                                <span class="icon">★</span>
+                                <span class="icon">★</span>
+                            </label>
+                            <label>
+                                <input type="radio" name="stars" value="5" />
+                                <span class="icon">★</span>
+                                <span class="icon">★</span>
+                                <span class="icon">★</span>
+                                <span class="icon">★</span>
+                                <span class="icon">★</span>
+                            </label>
+
+                        </form>
+
+                        <br />
+
+                        <h1 style="font-size: 23px;margin-left: 134px;margin-bottom: -36px;">
+                            Atendimento
+                        </h1>
+                        <form style="margin-left: 269px;" class="rating">
+                            <label>
+                                <input type="radio" name="stars" value="1" />
+                                <span class="icon">★</span>
+                            </label>
+                            <label>
+                                <input type="radio" name="stars" value="2" />
+                                <span class="icon">★</span>
+                                <span class="icon">★</span>
+                            </label>
+                            <label>
+                                <input type="radio" name="stars" value="3" />
+                                <span class="icon">★</span>
+                                <span class="icon">★</span>
+                                <span class="icon">★</span>
+                            </label>
+                            <label>
+                                <input type="radio" name="stars" value="4" />
+                                <span class="icon">★</span>
+                                <span class="icon">★</span>
+                                <span class="icon">★</span>
+                                <span class="icon">★</span>
+                            </label>
+                            <label>
+                                <input type="radio" name="stars" value="5" />
+                                <span class="icon">★</span>
+                                <span class="icon">★</span>
+                                <span class="icon">★</span>
+                                <span class="icon">★</span>
+                                <span class="icon">★</span>
+                            </label>
+
+                        </form>
+
+                        <br />
 
 
+                        <form>
+                            <h1 style="margin-bottom: -17px;margin-left: 161px;font-size: 23px;">Comentário</h1>
+                            <br />
+                            <input style="margin-left: 161px;width:463px;height:30px" />
 
+                        </form>
+
+
+                    </div>
+                    <div class="modal-avaliacao-footer">
+                        <button type="button" class="btn btn-default">Concluir</button>
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
+
+                    </div>
                 </div>
             </div>
         </div>
