--- a/SupplierRanking/Views/HomeLogada/RankingGeral.cshtml
+++ b/SupplierRanking/Views/HomeLogada/RankingGeral.cshtml
@@ -94,7 +94,7 @@
                                 </p>
                             </div>
                             <div class="col-1 d-flex flex-wrap justify-content-center align-items-center">
-                                <button data-target="#myModal" class="btn btn-info btn-lg" data-toggle="modal">Avaliar</button>
+                                <button data-target="#myModal2" class="btn btn-info btn-lg" data-toggle="modal">Avaliar</button>
 
                                 @*@Html.ActionLink("Perfil", "Perfil", new { item.Cnpj })*@
                                 <a style="text-decoration: none;color: white;" id="" href="/HomeLogada/Perfil/?Cnpj=@item.Cnpj">Perfil</a>
@@ -154,7 +154,7 @@
                                 </p>
                             </div>
                             <div class="col-1 d-flex flex-wrap justify-content-center align-items-center">
-                                <button data-target="#myModal" class="btn btn-info btn-lg" data-toggle="modal">Avaliar</button>
+                                <button data-target="#myModal2" class="btn btn-info btn-lg" data-toggle="modal">Avaliar</button>
 
                                 @*@Html.ActionLink("Perfil", "Perfil", new { item.Cnpj })*@
                                 <a style="text-decoration: none;color: #2c8cb6;" id="" href="/HomeLogada/Perfil/?Cnpj=@item.Cnpj">Perfil</a>
@@ -168,25 +168,25 @@
         </ul>
 
         <!-- Modal -->
-        <div class="modal fade" id="myModal" role="dialog">
-            <div class="modal-dialog modal-lg">
-                <div class="modal-content">
-                    <div class="modal-header" style="
+        <div class="modal-avaliacao fade" id="myModal2" role="dialog">
+            <div class="modal-avaliacao-dialog modal-avaliacao-lg">
+                <div class="modal-avaliacao-content">
+                    <div class="modal-avaliacao-header" style="
                             background-color: #0C496BE6;
                             color: white;
                             border-bottom: 3px solid #bbad00; ">
 
-                        <h4 style="margin-left: 241px;" class="modal-title">Nós ajude a melhorar nosso serviço!</h4>
+                        <h4 style="margin-left: 241px;" class="modal-avaliacao-title">Nós ajude a melhorar nosso serviço!</h4>
                         <button type="button" class="close" data-dismiss="modal" style="color:white;">×</button>
 
                     </div>
-                    <div class="modal-body">
+                    <div class="modal-avaliacao-body">
                         <p>Avalie por :</p>
 
                         <h1 style="font-size: 23px;margin-left: 134px;margin-bottom: -36px;">
                             Entrega
                         </h1>
-                        <form style="margin-left: 269px;" class="rating">
+                        <form action="../Avaliacao/CadastrarAvaliacao" style="margin-left: 269px;" class="rating">
 
                             <label>
 
@@ -394,8 +394,8 @@
 
 
                     </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-default">Concluir</button>
+                    <div class="modal-avaliacao-footer">
+                        <button  type="submit" class=" btn btn-default">Concluir</button>
                         <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
 
                     </div>
