La - Tela Esqueceu Sua Senha Fornecedor (começo dos ajustes)

--- a/SupplierRanking/Views/Shared/_LayoutLogin.cshtml
+++ b/SupplierRanking/Views/Shared/_LayoutLogin.cshtml
@@ -51,6 +51,7 @@
         <script src="~/Content/js/login.js"></script>
         <script src="~/Content/js/esqueceu-senha.js"></script>
         <script src="~/Content/js/esqueceu-senha-comprador.js"></script>
+        <script src="~/Content/js/esqueceu-senha-fornecedor.js"></script>
         
     </body>
 </html>
