--- a/SupplierRanking/Views/Fornecedor/EsqueceuSuaSenha.cshtml
+++ b/SupplierRanking/Views/Fornecedor/EsqueceuSuaSenha.cshtml
@@ -1,29 +1,10 @@
-﻿
+﻿@model SupplierRanking.Models.Fornecedor
 @{
-    ViewBag.Title = "EsqueceuSuaSenha";
+    ViewBag.Title = "Restaurar Senha";
     Layout = "~/Views/Shared/_LayoutLogin.cshtml";
 }
 
-@*<div class="container-login100">
-    <div class="wrap-login100" style="background-color: white;">
-        <h2>Enviar E-mail</h2>
-        <form action="../Fornecedor/EnviarEmail" method="post" class="login100-form validate-form">
-
-            - Formulario para enviar e-mails 
-            <div id="">
-                <h2>Digite o seu CNPJ para enviarmos um email de redefinição de senha para o seu email cadastrado. </h2>
-                <br />  <br />
-                <input type="text" name="cnpj" placeholder="CNPJ">
-                <br />  <br/>                  
-            </div>
-
-            <br /> <br />
-            <button id="btnEnviarEmail">Enviar</button>
-        </form>
-    </div>
-</div>*@
-<div class="wrap-restaurar-senha">
-
+<div class="wrap-restaurar-senha-fornecedor">
     <div class="row col-12 justify-content-center text-center mt-4">
         <h2>Esqueceu sua senha?</h2>
     </div>
@@ -39,13 +20,12 @@
                         <img src="/Content/images/comprador.png" />
                         <h5 class="switch-person-title p-2">Comprador</h5>
                     </div>
-                    </a>
-</div>
-          
+                </a>
+            </div>
+
             <!--- Switch --->
             <label class="switch m-3">
                 <a href="../Comprador/EsqueceuSuaSenha">
-                    
                     <input id="switchFornecedor" type="checkbox" checked />
                     <span class="slider slider-fornecedor round "></span>
                 </a>
@@ -53,78 +33,56 @@
 
             <!--- Fornecedor --->
             <div class="col-5 js-tilt" data-tilt>
-                <a class="d-flex justify-content-center" >
-                <div id="btnFornecedor" class="col-9 switch-wrapper active-switch  p-3">
-                    <img src="/Content/images/fornecedor.png" />
-                    <h5 class="switch-person-title p-2">Fornecedor</h5>
-                </div>
+                <a class="d-flex justify-content-center">
+                    <div id="btnFornecedor" class="col-9 switch-wrapper active-switch  p-3">
+                        <img src="/Content/images/fornecedor.png" />
+                        <h5 class="switch-person-title p-2">Fornecedor</h5>
+                    </div>
                 </a>
             </div>
         </div>
     </div>
 
     <!--- Formulario de Enviar email--->
-    <form class="row restaura-senha-form justify-content-center p-5 hide"
+    <form class="row restaurar-senha-fornecedor-form justify-content-center p-5"
           method="post" action="../Fornecedor/EsqueceuSuaSenha">
 
-
-       
-
         <!--- CNPJ --->
-        <div id="inputCnpj" class="col-10 wrap-input pl-2 ">
+        <div id="inputCnpj" class="col-10 wrap-input pl-2">
             <input class="input" type="text" maxlength="19" name="cnpj" placeholder="CNPJ" data-mask="00.000.000/0000-00" data-mask-sectionFocus="true">
-            <span class="focus-input"></span>
-            <span class="symbol-input">
-                <i class="fa fa-envelope" aria-hidden="true"></i>
-            </span>
-            <br />
-            <p style="margin-left: 50%;font-size: 20px;font-family: inherit;color: #DAA520;">Ou</p>
         </div>
-
-        
-
-
-
 
         <!--- Email --->
         <div id="inputEmail" class="col-10 wrap-input pl-2  mt-3">
-            <input class="input" type="email" name="email" placeholder="E-mail">
-            <span class="focus-input"></span>
-            <span class="symbol-input">
-                <i class="fa fa-lock" aria-hidden="true"></i>
-            </span>
-        </div>
+            <div class="d-flex justify-content-center mb-4">
+                OU
+            </div>
 
-        <input id="inputHidden" type="text" name="inputHidden" hidden>
+            <input class="input" type="email" name="email" placeholder="E-mail">
+        </div>
 
     </form>
 
     <div class="row col-12 login-options justify-content-center p-5">
 
-        @*<span class="col-8 error-msg alert-danger text-center p-2 mt-3 mb-4 hide">
-                Preencha o(s) campo(s) corretamente! @(ViewBag.Message)
-            </span>*@
-        
-        <!---Botão voltar-->
-        <div style="margin-right: 175px;" class="text-left pt-3">
+        <span class="@ViewBag.cssClass">
+            @ViewBag.Message
+        </span>
 
-            <a class="sub-link" href="/Login/Login">
-                Voltar
-            </a>
+        <div class="col-6 d-flex align-items-center">
+            <!--- Voltar --->
+            <div class="text-left">
+                <a class="sub-link" href="/Login/Login">
+                    Voltar
+                </a>
+            </div>
         </div>
 
-       
-
-
-        <!--- Botao Enviar --->
-        <div class=" col-6 d-flex justify-content-end align-items-center pl-0 pr-4">
-            <button id="btnEnviarEmail" type="submit" class="restaura-senha-form-btn" >
-              Enviar
+        <!--- Botao Entrar --->
+        <div class="col-6 d-flex justify-content-end align-items-center pl-0">
+            <button id="btnEnviarEmail" type="submit" class="login-form-btn disabled" disabled>
+                Enviar
             </button>
         </div>
     </div>
-
-
-
-
 </div>
