La - Esqueceu Sua Senha Fornecedor (JS,HTML, Controller e Model)

--- a/SupplierRanking/Views/Comprador/EsqueceuSuaSenha.cshtml
+++ b/SupplierRanking/Views/Comprador/EsqueceuSuaSenha.cshtml
@@ -33,7 +33,7 @@
 
             <!--- Fornecedor --->
             <div class="col-5 js-tilt" data-tilt>
-                <a href="../Fornecedor/EsqueceuSuaSenha">
+                <a class="d-flex justify-content-center" href="../Fornecedor/EsqueceuSuaSenha">
                     <div id="btnFornecedor" class="col-9 switch-wrapper p-3">
                         <img src="/Content/images/fornecedor.png" />
                         <h5 class="switch-person-title p-2">Fornecedor</h5>
