La - Nova Senha Fornecedor

--- a/SupplierRanking/Views/Comprador/NovaSenha.cshtml
+++ b/SupplierRanking/Views/Comprador/NovaSenha.cshtml
@@ -1,6 +1,6 @@
 ﻿@model SupplierRanking.Models.Comprador
 @{
-    ViewBag.Title = "NovaSenha";
+    ViewBag.Title = "Nova Senha";
     Layout = "~/Views/Shared/_LayoutCadastro.cshtml";
 }
 
