--- a/SupplierRanking/Views/HomeLogada/RankingGeral.cshtml
+++ b/SupplierRanking/Views/HomeLogada/RankingGeral.cshtml
@@ -94,9 +94,10 @@
                                 </p>
                             </div>
                             <div class="col-1 d-flex flex-wrap justify-content-center align-items-center">
-                                <button data-target="#myModal2" class="btn btn-info btn-lg" data-toggle="modal">Avaliar</button>
-
-                                @*@Html.ActionLink("Perfil", "Perfil", new { item.Cnpj })*@
+                                @if (Session["UserFornecedor"] == null)
+                                {
+                                    <button data-target="#myModal2" class="btn btn-info btn-lg" data-toggle="modal">Avaliar</button>
+                                }
                                 <a style="text-decoration: none;color: white;" id="" href="/HomeLogada/Perfil/?Cnpj=@item.Cnpj">Perfil</a>
                             </div>
                         </div>
@@ -153,12 +154,15 @@
                                     @item.Endereco, @item.Bairro - @item.Cidade / @item.Uf
                                 </p>
                             </div>
-                            <div class="col-1 d-flex flex-wrap justify-content-center align-items-center">
+                            
+                                <div class="col-1 d-flex flex-wrap justify-content-center align-items-center">
+                            @if (Session["UserFornecedor"] == null)
+                            {
                                 <button data-target="#myModal2" class="btn btn-info btn-lg" data-toggle="modal">Avaliar</button>
-
-                                @*@Html.ActionLink("Perfil", "Perfil", new { item.Cnpj })*@
+                            }
                                 <a style="text-decoration: none;color: #2c8cb6;" id="" href="/HomeLogada/Perfil/?Cnpj=@item.Cnpj">Perfil</a>
-                            </div>
+                                </div>
+                            
                         </div>
                         
                     </li>
